add: Format Tweet Method

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,1 +1,57 @@
-<h1>Hello world Again</h1>
+{% extends 'base.html' %}
+
+{% block head_title%}
+this is amazing
+{% endblock head_title%}
+
+{% block content %}
+Welcome to tweetme
+
+<div id="tweets">
+    Loading...
+
+</div>
+
+<script>
+    const tweetsElement = document.getElementById("tweets") //get an html element
+    // tweetsElement.innerHTML = "Loading..." //set new html in that element 
+    // var el1 = "<h1>Hi there 1</h1>"
+    // var el2 = "<h1>Hi there 1</h1>"
+    // var el3 = "<h1>Hi there 1</h1>"
+    // tweetsElement.innerHTML =  el1 + el2 + el3
+
+
+
+    const xhr = new XMLHttpRequest() // xhr = SomeClass()
+    const method = 'GET' // post
+    const url = "/tweets"
+    const responseType = "json"
+
+    function formatTweetElement(tweet){
+        var formatedTweet = "<div class='mb-4 tweet' id='tweet-" + tweet.id + "'><p>" + tweet   .content + "</p></div>"
+        return formatedTweet  
+    }   
+    
+
+    xhr.responseType = responseType
+    xhr.open(method, url)
+    xhr.onload = function(){
+        const serverResponse = xhr.response
+        var listedItems = serverResponse.response //list of elements (array)
+        var finaltweetStr = ""
+        var i;
+        for(i=0; i < listedItems.length; i++){
+            var tweetObj = listedItems[i] 
+            var currentItem = formatTweetElement(tweetObj)
+            finaltweetStr += currentItem
+        }
+        tweetsElement.innerHTML = finaltweetStr
+
+        //console.log(listedItems)
+    }
+    xhr.send() 
+
+</script>
+
+
+{% endblock content %}
