add: like button

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -27,8 +27,24 @@ Welcome to tweetme
     const url = "/tweets"
     const responseType = "json"
 
+    function handleDidLike(tweet_id, currentCount){
+        console.log(tweet_id, currentCount)
+        currentCount++
+        return 
+    }
+
+    
+    function likeBtn(tweet){
+        return "<button class='btn btn-primary' onClick = handleDidLike(" + 
+        tweet.id + "," + tweet.likes + ")>" + tweet.likes +" Likes </button>"
+
+    }
+
+
     function formatTweetElement(tweet){
-        var formatedTweet = "<div class='mb-4 tweet' id='tweet-" + tweet.id + "'><p>" + tweet   .content + "</p></div>"
+        var formatedTweet = "<div class='mb-4 tweet' id='tweet-" + tweet.id 
+        + "'><p>" + tweet.content + 
+            "</p><div class='btn-group'>" + likeBtn(tweet) + "</p></div></div>"
         return formatedTweet  
     }   
     
