--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -9,7 +9,17 @@
     </div>
 </div>
 
-  
+<div class= 'row mb-3'>
+    <div class = 'col-md-4 mx-auto col-10'>
+        <form class='form' method='POST' action="/create-tweet">
+            {% csrf_token %}
+             <input type="hidden" value='/' name='next' />
+            <textarea class='form-control' name="content" placeholder="What's in your mind"></textarea>
+            <button class='btn btn-primary' type='submit'>Tweet</button>
+        </form>
+    </div>
+</div>
+    
 <div class='row' id="tweets">
     Loading...
 
